# XtraCare-pipeline

./: README.md  db.env  hsn_code_scrapper.py  main.py  pipeline.py  pipelineNew.py  pyproject.toml  test_icegate_fastapi.py
results/1811544033/checklists/: 1811544033_generated_checklist.json  1811544033_original_checklist.json  1811544033_partial_checklist.json
results/1811544033/features/: 1811544033 MAWB_features.json  1811544033 awb_features.json  1811544033 inv_features.json
results/884473127560/checklists/: 884473127560_generated_checklist.json  884473127560_original_checklist.json  884473127560_partial_checklist.json
results/884473127560/features/: 884473127560 MAWB_features.json  884473127560 awb_features.json  884473127560 inv_features.json  884473127560 licence_features.json
results/9929540950/checklists/: 9929540950_generated_checklist.json  9929540950_original_checklist.json  9929540950_partial_checklist.json
results/9929540950/features/: 9929540950 COA_features.json  9929540950 FDA COPY_features.json  9929540950 FORM COS-8_features.json  9929540950 MAWB 2_features.json  9929540950 MAWB_features.json  9929540950 MSDS_features.json  9929540950 NOC LETTER_features.json  9929540950 awb_features.json  9929540950 end use_features.json  9929540950 inv_features.json
results/BTS30161036/checklists/: BTS30161036_generated_checklist.json  BTS30161036_original_checklist.json  BTS30161036_partial_checklist.json
results/BTS30161036/features/: BTS30161036 HAWB_features.json  (+5 more)
schema/: AWB.json  checklist.json  invoice.json  packingList.json
(+6 files in other folders)
